# VibeCoding

./: .editorconfig  .env.example  .env.integrations.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_PROMPT_PREFIX.md  CODEX_RULES.md  Dockerfile  KARPATHY-GUIDELINES.md  Makefile  README.md  ROADMAP.md  STACK.md  WORKSPACE.md  deal_15314_snapshot.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
belberry/bitrix24/crm_company_enrich/: AGENTS.md  README.md  pyproject.toml
belberry/bitrix24/crm_company_enrich/crm_company_enrich/: __init__.py  bitrix_client.py  cli.py  config.py  domain.py  hyperlinks.py  models.py  region_rf_config.py  rusprofile_director.py  sheet_store.py  sheets_client.py  state.py  telegram_client.py
belberry/bitrix24/crm_company_enrich/scripts/: audit_inn_duplicates.py  cloudbot-enrich-loop.sh  cloudbot-inn-dup-audit.sh
belberry/bitrix24/crm_company_enrich/tests/: conftest.py  test_apply_address_fields.py  test_apply_create_req.py  test_apply_duplicates.py  test_apply_hybrid.py  test_apply_skips_name_full.py  test_auto_promote_base.py  test_auto_reject_telemarketing.py  test_auto_revive_lose.py  test_bitrix_client.py  test_classify_dedupe.py  test_clean_company_name.py  test_cli_audit_uf_sites.py  test_company_region_field.py  test_contact_personal_inn_field.py  test_deal_reactivation_count_field.py  test_deal_revive_count_field.py  test_dedupe_contacts.py  test_discover_classifier.py  test_empty_manual_site_promote.py  test_empty_upload_plan_filter.py  test_enrich_company_full.py  test_enrich_director_inn.py  test_enrich_empty_companies_apply_guard.py  test_enrich_from_sheet.py  test_enrich_from_sheet_inplace.py  test_enrich_web_alive_check.py  test_enrich_web_parsing.py  test_extract_web_url.py  test_http_fetcher.py  test_in_active_deal_merge_skipped.py  test_inn_regex_proximity.py  test_is_medical_company.py  test_log_dir_isolation.py  test_manual_review_status.py  test_migrate_region_enum_ids.py  test_migrate_revive_count_to_uf.py  test_normalize_inn.py  test_reactivation_apology.py  test_rebind_orphan_contacts.py  (+10 more)
belberry/bitrix24/crm_company_merge/: README.md  pyproject.toml
belberry/bitrix24/crm_company_merge/crm_company_merge/: __init__.py  bitrix_client.py  cli.py  config.py  models.py  notifications.py  sheets_client.py
belberry/bitrix24/crm_company_merge/deploy/: env.example  install_on_vps.sh
belberry/bitrix24/crm_company_merge/tests/: __init__.py  test_bitrix_client.py  test_bitrix_client_sync.py  test_cli.py  test_models.py  test_notifications.py  test_sheets_client.py  test_stage_classify.py  test_stage_discover.py  test_stage_inventory.py  test_stage_merge.py  test_stage_step9.py  test_stage_transfer.py  test_state_machine.py
belberry/bitrix24/crm_deal_merge/: README.md  pyproject.toml
belberry/bitrix24/crm_deal_merge/crm_deal_merge/: __init__.py  bitrix_client.py  cli.py  config.py  domain.py  grouping.py  hyperlinks.py  models.py  sheet_store.py  sheets_client.py  state.py
belberry/bitrix24/crm_deal_merge/scripts/: approve_remaining_safe.py  audit_empty_company_duplicates.py  cron_refresh.sh  (+5 more)
belberry/bitrix24/empty_companies_score/: README.md  pyproject.toml
belberry/bitrix24/sales_dashboard/: LOOKER_GUIDE.md  PLAN_METABASE.md  README.md  pyproject.toml
belberry/bitrix24/sales_kpi_dashboard/: .gitignore  DISCOVERY.md  README.md  SHEET_SCHEMA.md  UAT_PHASE2.md  UAT_PHASE3.md  UAT_PHASE4.md  VPS_DEPLOY.md  discovery_probe.py  discovery_sp1048_probe.py  pyproject.toml
(+2081 files in other folders)
