[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm_company_enrich"
version = "0.1.0"
description = "Enrichment-движок для компаний Bitrix24 без реквизита ИНН"
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "google-auth-httplib2>=0.2.0",
  "httplib2>=0.22.0",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
company-enrich = "crm_company_enrich.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["crm_company_enrich"]
