[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "empty_companies_score"
version = "0.1.0"
description = "Ежедневный скоринг placeholder-карточек компаний Belberry Bitrix24 (триаж на удаление)"
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
]

[project.scripts]
empty-companies-score = "empty_companies_score.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["empty_companies_score"]
