[project]
name = "sales_dashboard"
version = "0.1.0"
description = "ETL Bitrix24 → Google Sheets для дашборда продаж/телемаркетинга в Looker Studio"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
]

[project.scripts]
sales-dashboard = "sales_dashboard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sales_dashboard*"]
